<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/joinCreateButtonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/joinGroupButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/join_group"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/createGroupButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/create_group"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/leaveButtonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_below="@+id/joinCreateButtonLayout"
        android:visibility="gone"
        android:orientation="horizontal"
        android:weightSum="1">

        <Button
            android:id="@+id/leaveGroupButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/leave_group"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/listTitleLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/leaveButtonLayout"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:orientation="vertical"
        android:visibility="gone"
        android:gravity="center"
        android:weightSum="1">

        <TextView
            android:id="@+id/listTitle"
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

    </LinearLayout>

    <ListView
        android:id="@+id/listView"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@id/listTitleLayout"
        android:visibility="gone"/>

</RelativeLayout>
